// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:rating with allowClear 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="rating"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  评分
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RatingControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Rating"
            >
              <ul>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="rating"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
              >
                <span
                  aria-disabled="false"
                  aria-label="Increase Value"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                  role="button"
                  unselectable="on"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                    unselectable="on"
                  />
                </span>
                <span
                  aria-disabled="false"
                  aria-label="Decrease Value"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                  role="button"
                  unselectable="on"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                    unselectable="on"
                  />
                </span>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
              >
                <input
                  aria-valuenow="0"
                  autocomplete="off"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                  name="rating"
                  role="spinbutton"
                  step="1"
                  value="0"
                />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:rating with char & charClassName 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="rating"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  评分
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RatingControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Rating"
            >
              <ul>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star test-rating-char is-active"
                >
                  X
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star test-rating-char is-active"
                >
                  X
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star test-rating-char"
                >
                  X
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star test-rating-char"
                >
                  X
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star test-rating-char"
                >
                  X
                </li>
              </ul>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:rating with colors & inactiveColor 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="rating"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  评分
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RatingControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Rating"
            >
              <ul>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                  style="color: rgb(119, 168, 141);"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                  style="color: rgb(119, 168, 141);"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                  style="color: rgb(119, 168, 141);"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star"
                  style="color: yellow;"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star"
                  style="color: yellow;"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="rating"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  选中数量
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
              >
                <span
                  aria-disabled="false"
                  aria-label="Increase Value"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                  role="button"
                  unselectable="on"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                    unselectable="on"
                  />
                </span>
                <span
                  aria-disabled="false"
                  aria-label="Decrease Value"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                  role="button"
                  unselectable="on"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                    unselectable="on"
                  />
                </span>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
              >
                <input
                  aria-valuenow="3"
                  autocomplete="off"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                  name="rating"
                  role="spinbutton"
                  step="1"
                  value="3"
                />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:rating with count & half 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="rating"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  评分
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RatingControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Rating"
            >
              <ul>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-half"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star-half"
                  >
                    <icon-mock
                      class="icon icon-star"
                      icon="star"
                    />
                  </div>
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
              </ul>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:rating with readOnly 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="rating"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  评分
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RatingControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Rating"
            >
              <ul>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active is-disabled"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active is-disabled"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active is-disabled"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active is-disabled"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active is-disabled"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="rating"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
              >
                <span
                  aria-disabled="false"
                  aria-label="Increase Value"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                  role="button"
                  unselectable="on"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                    unselectable="on"
                  />
                </span>
                <span
                  aria-disabled="false"
                  aria-label="Decrease Value"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                  role="button"
                  unselectable="on"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                    unselectable="on"
                  />
                </span>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
              >
                <input
                  aria-valuenow="5"
                  autocomplete="off"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                  name="rating"
                  role="spinbutton"
                  step="1"
                  value="5"
                />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:rating with texts & textPosition & textClassName 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="rating"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  评分
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RatingControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Rating"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-text test-rating-class __AMIS_COMPONENT_CLASS_PREFIX__Rating-text--left"
              >
                非常优秀
              </span>
              <ul>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
                <li
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Rating-star is-active"
                >
                  <icon-mock
                    class="icon icon-star"
                    icon="star"
                  />
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="rating"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  选中数量
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__NumberControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
              >
                <span
                  aria-disabled="false"
                  aria-label="Increase Value"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                  role="button"
                  unselectable="on"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                    unselectable="on"
                  />
                </span>
                <span
                  aria-disabled="false"
                  aria-label="Decrease Value"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                  role="button"
                  unselectable="on"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                    unselectable="on"
                  />
                </span>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
              >
                <input
                  aria-valuenow="5"
                  autocomplete="off"
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                  name="rating"
                  role="spinbutton"
                  step="1"
                  value="5"
                />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
